--- a/sobremi.html
+++ b/sobremi.html
@@ -11,11 +11,11 @@
 <header>
     <div class="logo">PECSITONIC</div>
     <nav>
-        <a href="pecsitonic.html">Inicio</a>
-        <a href="pecsitonic.html">Servicios</a>
+        <a href="index.html">Inicio</a>
+        <a href="index.html">Servicios</a>
 		<a href="portfolio.html">Proyectos</a>
 		<a href="sobremi.html">Sobre mí</a>
-		<a href="pecsitonic.html">Contacto</a>
+		<a href="index.html">Contacto</a>
     </nav>
 </header>
 
