--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <a class="hero-btn">Ver</a>
             </div>
 
-            <img class="sli" src="img/slider01.png">
+            <img class="sli" src="slider01.png">
         </div>
 
         <!-- SLIDE 2 -->
@@ -50,7 +50,7 @@
                 <a class="hero-btn">Ver</a>
             </div>
 
-            <img class="sli" src="img/slider02.png">
+            <img class="sli" src="slider02.png">
         </div>
 
         <!-- SLIDE 3 -->
@@ -62,7 +62,7 @@
                 <a class="hero-btn">Ver</a>
             </div>
 
-            <img class="sli" src="img/slider03.png">
+            <img class="sli" src="slider03.png">
         </div>
 
     </div>
@@ -84,55 +84,55 @@
     <div class="servicios-grid">
 
         <div class="serv-card">
-            <img class="icon-box" src="img/server.png">
+            <img class="icon-box" src="server.png">
             <h3>Servidores Minecraft/hytale</h3>
             <p>Setup completo, rendimiento y optimización.</p>
         </div>
 
         <div class="serv-card">
-            <img class="icon-box" src="img/modpack.png">
+            <img class="icon-box" src="modpack.png">
             <h3>Modpacks</h3>
             <p>Creación personalizada para tu comunidad.</p>
         </div>
 
         <div class="serv-card">
-            <img class="icon-box" src="img/npc.png">
+            <img class="icon-box" src="npc.png">
             <h3>NPCs Custom</h3>
             <p>NPCs configurados a medida.</p>
         </div>
 
         <div class="serv-card">
-            <img class="icon-box" src="img/rol.png">
+            <img class="icon-box" src="rol.png">
             <h3>Diseño Visual</h3>
             <p>Rangos, títulos y estética del servidor.</p>
         </div>
 
         <div class="serv-card">
-            <img class="icon-box" src="img/modcustom.png">
+            <img class="icon-box" src="modcustom.png">
             <h3>Mods Custom</h3>
             <p>Mods personalizados para Minecraft o Hytale.</p>
         </div>
 
         <div class="serv-card">
-            <img class="icon-box" src="img/clip.png">
+            <img class="icon-box" src="clip.png">
             <h3>Diseño Multimedia</h3>
             <p>Banners, miniaturas y logos básicos.</p>
         </div>
 
         <div class="serv-card">
-            <img class="icon-box" src="img/pixel.png">
+            <img class="icon-box" src="pixel.png">
             <h3>Pixel Art</h3>
             <p>Sprites y animaciones.</p>
         </div>
 
         <div class="serv-card">
-            <img class="icon-box" src="img/block.png">
+            <img class="icon-box" src="block.png">
             <h3>Blockbench</h3>
             <p>Modelos lowpoly y animaciones.</p>
         </div>
 
         <div class="serv-card">
-            <img class="icon-box" src="img/bot.png">
+            <img class="icon-box" src="bot.png">
             <h3>Bots Discord</h3>
             <p>Roles, comandos y automatización.</p>
         </div>
@@ -147,27 +147,27 @@
     <div class="grid-mods">
 
         <a href="https://www.curseforge.com/minecraft/mc-mods/mobstein-upgrade-useless-animals" target="_blank">
-            <img src="img/01.png">
+            <img src="01.png">
         </a>
 
         <a href="https://www.curseforge.com/minecraft/mc-mods/phenominae" target="_blank">
-            <img src="img/02.png">
+            <img src="02.png">
         </a>
 
         <a href="https://www.curseforge.com/minecraft/mc-mods/morebatsvariants" target="_blank">
-            <img src="img/06.png">
+            <img src="06.png">
         </a>
 
         <a href="https://www.curseforge.com/minecraft/mc-mods/unicorns-legends" target="_blank">
-            <img src="img/04.png">
+            <img src="04.png">
         </a>
 
         <a href="https://www.curseforge.com/minecraft/mc-mods/djfurniture" target="_blank">
-            <img src="img/05.png">
+            <img src="05.png">
         </a>
 
         <a href="https://www.curseforge.com/minecraft/mc-mods/frutigeraerodecor" target="_blank">
-            <img src="img/03.png">
+            <img src="03.png">
         </a>
 
     </div>
@@ -178,8 +178,8 @@
     <h2 class="titulo-seccion">MODPACKS</h2>
 
     <div class="grid-modpacks">
-        <img src="img/frostonic.png">
-        <img src="img/frostonic2.png">
+        <img src="frostonic.png">
+        <img src="frostonic2.png">
     </div>
 </section>
 
