--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
     <div class="portfolio-grid">
 
         <div class="portfolio-card">
-            <img src="img/01.png">
+            <img src="01.png">
             <div class="p-hover">
                 <h3>Mobstein</h3>
                 <a href="https://www.curseforge.com/minecraft/mc-mods/mobstein-upgrade-useless-animals" class="p-btn">Ver proyecto</a>
@@ -68,7 +68,7 @@
         </div>
 
         <div class="portfolio-card">
-            <img src="img/02.png">
+            <img src="02.png">
             <div class="p-hover">
                 <h3>Phenominae</h3>
                 <a href="https://www.curseforge.com/minecraft/mc-mods/phenominae" class="p-btn">Ver proyecto</a>
@@ -76,7 +76,7 @@
         </div>
 
         <div class="portfolio-card">
-            <img src="img/06.png">
+            <img src="06.png">
             <div class="p-hover">
                 <h3>Better Bats+</h3>
                 <a href="https://www.curseforge.com/minecraft/mc-mods/morebatsvariants" class="p-btn">Ver proyecto</a>
@@ -84,7 +84,7 @@
         </div>
 
         <div class="portfolio-card">
-            <img src="img/frostonic.png">
+            <img src="frostonic.png">
             <div class="p-hover">
                 <h3>Frostonic Modpack</h3>
                 <a href="#" class="p-btn">Ver proyecto</a>
