--- a/sobremi.html
+++ b/sobremi.html
@@ -5,39 +5,75 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pecsitonic | Sobre mí</title>
     <link rel="stylesheet" href="estilos.css">
+
+    <!-- Google Translate -->
+    <script type="text/javascript">
+        function googleTranslateElementInit() {
+            new google.translate.TranslateElement({
+                pageLanguage: 'es',
+                includedLanguages: 'es,en,pt,fr,it,de',
+                layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+            }, 'google_translate_element');
+        }
+    </script>
+
+    <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
+    <style>
+        .goog-te-banner-frame.skiptranslate { display: none !important; }
+        body { top: 0 !important; }
+
+        #google_translate_element select {
+            background: rgba(255,255,255,0.1);
+            border: 1px solid rgba(255,255,255,0.3);
+            color: white;
+            padding: 6px 10px;
+            border-radius: 6px;
+            backdrop-filter: blur(4px);
+            cursor: pointer;
+        }
+        option { color: black; }
+    </style>
+
 </head>
 <body>
 
 <header>
+    <!-- Selector de idioma -->
+    <div id="google_translate_element"></div>
+
     <div class="logo">PECSITONIC</div>
     <nav>
         <a href="index.html">Inicio</a>
         <a href="index.html">Servicios</a>
-		<a href="portfolio.html">Proyectos</a>
-		<a href="sobremi.html">Sobre mí</a>
-		<a href="index.html">Contacto</a>
+        <a href="portfolio.html">Proyectos</a>
+        <a href="sobremi.html">Sobre mí</a>
+        <a href="index.html">Contacto</a>
     </nav>
 </header>
 
+<!-- =============== HERO =============== -->
 <section class="hero-sobre-mi">
-    <h1>SOBRE MI</h1>
+    <h1>SOBRE MÍ</h1>
     <p>Conocé quién está detrás de Pecsitonic.</p>
 </section>
 
+<!-- =============== CONTENIDO =============== -->
 <section class="sobre-mi-contenido">
 
     <div class="sobre-mi-grid">
 
         <div class="sobre-mi-texto">
+
             <h2>¿Quién soy?</h2>
             <p>
                 Me dedico al desarrollo de mods, diseño visual, branding digital, animación 3D, servidores Minecraft y proyectos creativos hechos a medida.
             </p>
             <p>
-                Trabajo de forma independiente (por ahora), organizada y manteniendo siempre comunicación y avances constantes con mis clientes.
+                Trabajo de forma independiente, organizada y manteniendo siempre comunicación y avances constantes con mis clientes.
             </p>
-			<p>
-                Tengo dos canales de YouTube dedicados a la creación de contenido. 
+            <p>
+                Tengo dos canales de YouTube dedicados a la creación de contenido.
             </p>
 
             <h2>Experiencia y habilidades</h2>
@@ -58,6 +94,7 @@
             </p>
 
             <a class="boton-contacto" href="mailto:contactopecsitonic@gmail.com">Contactar</a>
+
         </div>
 
     </div>
